--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -37,8 +37,9 @@
       // Set chart options
       var options = {
         title: "Top 5 countries for international students at CBNU in 2020",
-        width: 800,
-        height: 500,
+        width: 700,
+        height: 700,
+        backgroundColor: '#fffff3'
       };
 
       // Instantiate and draw our chart, passing in some options.
@@ -122,7 +123,7 @@
       ]);
 
       const options = {
-        backgroundColor: "#FFFFFF",
+        backgroundColor: '#fffff3',
         colorAxis: { colors: ["#5CAB7D", "#44633F"] },
       };
 
@@ -177,7 +178,7 @@
   </script> -->
 </head>
 
-<body>
+<body class="bg_main">
   <!--Navigation-->
   <header id="header">
     <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="margin-left: 30px">
@@ -214,7 +215,12 @@
       <img src="../abroad/img/carousel_bg_1.png" alt="" class="img-fluid"
         style="display: inline; height: 100vh; width: 100%" />
     </div>
-    <div id="pie_2020" class="pie_container"></div>
+
+    <div class="wraper1">
+      <img src="img/status1.jpg" alt="" class="status1 img-fluid"> 
+      <div id="pie_2020" class="pie_container"></div>
+    </div>
+
     <div id="geo_2020" class="geo_container"></div>
   </div>
 
