[FEAT] (#6) - Add image hover feature

--- a/main/main.html
+++ b/main/main.html
@@ -77,8 +77,8 @@
         </div>
     </div>
     <div class="row" id="infoDiv2">
-        <div class="col-sm-6" style="text-align: right">
-            <img id="infoImage1" src="img/infoimg1.jpg" width="600vw" style="margin-top: 15px; margin-bottom: 15px;"/>
+        <div class="col-sm-6 infoImage" style="text-align: right">
+            <img src="img/infoimg1.jpg" width="600vw" style="margin-top: 15px; margin-bottom: 15px;"/>
         </div>
         <div id="infoDiv2Text" class="col-sm-6" style="text-align: left;">
             <p style="font-size: 2vw; line-height: 1.5"><b>Get closer to your dream</b></p>
@@ -127,7 +127,7 @@
 
             </table>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 infoImage">
             <img src="img/infoimg2.jpg" width="600vw" style="margin-top: 15px; margin-bottom: 15px;"/>
         </div>
     </div>
