[CHORE] (#6) - Modify grammatical error

--- a/main/main.html
+++ b/main/main.html
@@ -139,7 +139,7 @@
         </div>
         <div class="col-sm-6">
             <div id="tempDiv" style="margin-top: 7vh">
-                <p id="tempString" style="font-size: 2vw; line-height: 1.5;"><b>Bus stop Near CBNU </b></p>
+                <p id="tempString" style="font-size: 2vw; line-height: 1.5;"><b>Bus stops Near CBNU </b></p>
                 <button class="btn-1" id="front">Front Gate</button>
                 <button class="btn-1" id="middle">Middel Gate</button>
                 <br>
