--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -124,6 +124,8 @@
 
       const options = {
         backgroundColor: '#fffff3',
+        width: 1000,
+        height: 600,
         colorAxis: { colors: ["#5CAB7D", "#44633F"] },
       };
 
@@ -216,12 +218,11 @@
         style="display: inline; height: 100vh; width: 100%" />
     </div>
 
-    <div class="wraper1">
-      <img src="img/status1.jpg" alt="" class="status1 img-fluid"> 
-      <div id="pie_2020" class="pie_container"></div>
-    </div>
-
+    <div><img src="img/status2.jpg" alt="" class="status2 img-fluid"></div>
     <div id="geo_2020" class="geo_container"></div>
+
+    <img src="img/status1.jpg" alt="" class="status1 img-fluid"> 
+    <div id="pie_2020" class="pie_container"></div>
   </div>
 
   <footer id="footer">
