--- a/restaurant/restaurant.html
+++ b/restaurant/restaurant.html
@@ -15,7 +15,8 @@
             <span class="blind">충북대학교 배너이미지</span>
             <img src="img/cbnu_logo_eng.png" alt="" class="" height="80" width="301" />
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+          <button class="navbar-toggler" type="button" 
+          data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -39,50 +40,28 @@
       </nav>
     </header>
 
-
-    <div id = "map" style = "width:800px; height:500px"></div>
+    <div id = "map" style = "width:800px; height:500px; margin-top: 200px;"></div>
     <button type="button" class="btn-primary" id="buttonMiddle">충북대 중문</button>
     <button type="button" class="btn-success" id="buttonFront">충북대 정문</button>
     <button type="button" class="btn-danger" id="buttonBack">충북대 후문</button>
     <button type="button" class="btn-warning" id="buttonWest">충북대 서문</button>
-
-
-    <button class="btn btn-primary" type="button" data-bs-toogle="offcanvas" data-bs-target="#offcanvasExample" 
-    aria-controls="offcanvasExample">Button with data-bs-target</button>
-      
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasLabel">
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel" aria-expanded="false">
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasLabel">Offcanvas</h5>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Information</h5>
+        <button type="button" id = "closeOffcanvas"class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
-        Content for the offcanvas goes here. You can place just about any Bootstrap component or custom elements here.
+        <div class="container">
+          <p id="storeName">name</p>
+          <p>
+              <span class="glyphicon glyphicon-map-marker"></span> Map
+          </p>
+        </div>
       </div>
     </div>
     
     <script type="text/javascript" src="items.js"></script>
     <script type="text/javascript" src="mymap.js">
-
-
-
-        // google.maps.event.addListener(marker, 'click', function(event){
-        //   document.write(`
-        //   <div class="container">
-        //     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-        //     <div class="offcanvas-header">
-        //     <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
-        //     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        //     </div>
-        //     <div class="offcanvas-body">
-        //     <div>
-        //     Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
-        //     </div>
-        //    </div>
-        //   </div>
-        //   </div>`);
-        // });
-        //}
-
     </script>
     <script type="module"> 
       import {secretKey} from './secretKey.js'
@@ -104,7 +83,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="./restaurant.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
