[ADD] (#6) - Add animation effect at first carousel view

--- a/main/main.html
+++ b/main/main.html
@@ -45,16 +45,18 @@
             <button type="button" data-bs-target="#slides" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="3000">
+            <div class="carousel-item active" data-bs-interval="5000">
                 <img src="img/carousel_bg_1.jpg">
-                <div class="carousel-caption">
-                    <h1 class="display-2">Welcome To<br>CHUNGBUK National University</h1>
+                <div class="carousel-caption container" style="margin-right: 900px; width: 700px; margin-top: 50px;">
+<!--                    <h1 class="display-2">Welcome To<br>CHUNGBUK National University</h1>-->
+                    <span class="text1">Welcome To</span>
+                    <span class="text2">Chungbuk National University</span>
                 </div>
             </div>
-            <div class="carousel-item" data-bs-interval="3000">
+            <div class="carousel-item" data-bs-interval="5000">
                 <img src="img/carousel_bg_2.jpg">
             </div>
-            <div class="carousel-item" data-bs-interval="3000">
+            <div class="carousel-item" data-bs-interval="5000">
                 <img src="img/carousel_bg_3.jpg">
             </div>
         </div>
