[CHORE] (#6) - Modify Typo

--- a/main/main.html
+++ b/main/main.html
@@ -143,7 +143,7 @@
             <div id="tempDiv" style="margin-top: 7vh">
                 <p id="tempString" style="font-size: 2vw; line-height: 1.5;"><b>Bus stops Near CBNU </b></p>
                 <button class="btn-1" id="front">Front Gate</button>
-                <button class="btn-1" id="middle">Middel Gate</button>
+                <button class="btn-1" id="middle">Middle Gate</button>
                 <br>
                 <button class="btn-1" id="west">West Gate</button>
                 <button class="btn-1" id="back">Back Gate</button>
