--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -37,8 +37,9 @@
       // Set chart options
       var options = {
         title: "Top 5 countries for international students at CBNU in 2020",
-        width: 700,
-        height: 700,
+        width: 800,
+        height: 800,
+        is3D: true,
         backgroundColor: '#fffff3'
       };
 
@@ -123,9 +124,9 @@
       ]);
 
       const options = {
-        backgroundColor: '#fffff3',
+        backgroundColor: '#FFFEDE',
         width: 1000,
-        height: 600,
+        height: 550,
         colorAxis: { colors: ["#5CAB7D", "#44633F"] },
       };
 
@@ -214,12 +215,14 @@
   </header>
   <div role="main">
     <div class="container-fluid" style="padding: 0px">
-      <img src="../abroad/img/carousel_bg_1.png" alt="" class="img-fluid"
+      <img src="img/bg_1.jpg" alt="" class="img-fluid"
         style="display: inline; height: 100vh; width: 100%" />
     </div>
 
-    <div><img src="img/status2.jpg" alt="" class="status2 img-fluid"></div>
-    <div id="geo_2020" class="geo_container"></div>
+    <div class="container1">
+      <div><img src="img/status2.jpg" alt="" class="status2 img-fluid"></div>
+      <div id="geo_2020" class="geo_container"></div>
+    </div>
 
     <img src="img/status1.jpg" alt="" class="status1 img-fluid"> 
     <div id="pie_2020" class="pie_container"></div>
