[MOD] (#13) - Modifying image design in abroad.html

--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -223,8 +223,9 @@
       <div><img src="img/status2.jpg" alt="" class="status2 img-fluid"></div>
       <div id="geo_2020" class="geo_container"></div>
     </div>
-
-    <img src="img/status1.jpg" alt="" class="status1 img-fluid"> 
+    <span class="infoImage"> 
+      <img src="img/status1.jpg" alt="" class="status1 img-fluid"> 
+    </sapn>
     <div id="pie_2020" class="pie_container"></div>
   </div>
 
