[ADD] (#3) wide view button and modifing the design of button

--- a/restaurant/restaurant.html
+++ b/restaurant/restaurant.html
@@ -40,11 +40,12 @@
       </nav>
     </header>
 
-    <div id = "map" style = "width:800px; height:500px; margin-top: 200px;"></div>
-    <button type="button" class="btn-primary" id="buttonMiddle">충북대 중문</button>
-    <button type="button" class="btn-success" id="buttonFront">충북대 정문</button>
-    <button type="button" class="btn-danger" id="buttonBack">충북대 후문</button>
-    <button type="button" class="btn-warning" id="buttonWest">충북대 서문</button>
+    <div id = "map" style = "width:100%; height:100vh; margin-top: 90px; margin-bottom: 10px;"></div>
+    <button type="button" class="btn btn-dark btn-lg" id="buttonWide">Wide View</button>
+    <button type="button" class="btn btn-outline-primary" id="buttonMiddle">Middle Gate</button>
+    <button type="button" class="btn btn-outline-success" id="buttonFront">Front Gate</button>
+    <button type="button" class="btn btn-outline-danger" id="buttonBack">Back Gate</button>
+    <button type="button" class="btn btn-outline-warning" id="buttonWest">West Gate</button>
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel" aria-expanded="false">
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="offcanvasExampleLabel">Information</h5>
