--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -219,7 +219,7 @@
         style="display: inline; height: 100vh; width: 100%" />
     </div>
 
-    <div class="container1">
+    <div class="container1 infoImage">
       <div><img src="img/status2.jpg" alt="" class="status2 img-fluid"></div>
       <div id="geo_2020" class="geo_container"></div>
     </div>
