[ADD] (#13) - Adding carousel image in abroad.html

--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -213,11 +213,37 @@
       </div>
     </nav>
   </header>
+  
   <div role="main">
-    <div class="container-fluid" style="padding: 0px">
+    <div id="slides" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#slides" data-bs-slide-to="0" class="active" aria-current="true"
+          aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#slides" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#slides" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="5000">
+          <img src="img/bg_1.jpg" alt="">
+          <div class="carousel-caption container" style="margin-right: 900px; width: 700px; margin-top: 50px;">
+            <!--                    <h1 class="display-2">Welcome To<br>CHUNGBUK National University</h1>-->
+            <span class="text1">Welcome To</span>
+            <span class="text2">Chungbuk National University</span>
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="5000">
+          <img src="img/carousel_bg_2.jpg" alt="">
+        </div>
+        <div class="carousel-item" data-bs-interval="5000">
+          <img src="img/carousel_bg_3.jpg" alt="">
+        </div>
+      </div>
+  </div>
+    
+    <!-- <div class="container-fluid" style="padding: 0px">
       <img src="img/bg_1.jpg" alt="" class="img-fluid"
         style="display: inline; height: 100vh; width: 100%" />
-    </div>
+    </div> -->
 
     <div class="container1 infoImage">
       <div><img src="img/status2.jpg" alt="" class="status2 img-fluid"></div>
