[ADD] (#13) - Adding carousel image datas in abroad.html

--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -213,7 +213,7 @@
       </div>
     </nav>
   </header>
-  
+
   <div role="main">
     <div id="slides" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -232,10 +232,10 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="img/carousel_bg_2.jpg" alt="">
+          <img src="img/bg_2.jpg" alt="">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="img/carousel_bg_3.jpg" alt="">
+          <img src="img/bg_3.jpg" alt="">
         </div>
       </div>
   </div>
