[ADD] (#6) - Change map language from Korean to English

--- a/main/main.html
+++ b/main/main.html
@@ -161,7 +161,7 @@
     <script type="text/javascript" src="config.js"></script>
     <!--TODO 이 부분 키 추가해야 함!-->
     <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcvWlh4WgVHdfJOQbg0WvHSYqgfs-LVG8&callback=initMap&region=kr"
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcvWlh4WgVHdfJOQbg0WvHSYqgfs-LVG8&language=en&callback=initMap&region=kr"
             async defer></script>
     <script>
         let map;
