[MOD] (#13) - Modifying CSS animation in abroad.html

--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -63,8 +63,8 @@
           <img src="img/bg_1.jpg" alt="">
           <div class="carousel-caption container" style="margin-right: 900px; width: 700px; margin-top: 50px;">
             <!--                    <h1 class="display-2">Welcome To<br>CHUNGBUK National University</h1>-->
-            <span class="text1">Welcome To</span>
-            <span class="text2">Chungbuk National University</span>
+            <span class="text1">Information</span>
+            <span class="text2">For international students in CBNU</span>
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5000">
