[ADD] (#13) - Adding css animation for navbar in abroad.html

--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -32,15 +32,15 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="menu_list">
             <li class="menu_item">
-              <a href="../main/main.html" class="nav-style"> Home </a>
+              <a href="../main/main.html" class="nav-style nav-animation"> Home </a>
             </li>
             <li class="menu_item">
-              <a href="../abroad/abroad.html" class="nav-style">
+              <a href="../abroad/abroad.html" class="nav-style nav-animation">
                 Information
               </a>
             </li>
             <li class="menu_item">
-              <a href="../restaurant/restaurant.html" class="nav-style">
+              <a href="../restaurant/restaurant.html" class="nav-style nav-animation">
                 Restaurant
               </a>
             </li>
