--- a/main/main.html
+++ b/main/main.html
@@ -23,14 +23,14 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="menu_list">
                     <li class="menu_item">
-                        <a href="../main/main.html" class="nav-style"> Home </a>
+                        <a href="../main/main.html" class="nav-style nav-animation"> Home </a>
                     </li>
                     <li class="menu_item">
-                        <a href="../abroad/abroad.html" class="nav-style"> Information </a>
+                        <a href="../abroad/abroad.html" class="nav-style nav-animation"> Information </a>
                     </li>
                     </li>
                     <li class="menu_item">
-                        <a href="../restaurant/restaurant.html" class="nav-style"> Restaurant </a>
+                        <a href="../restaurant/restaurant.html" class="nav-style nav-animation"> Restaurant </a>
                     </li>
                 </ul>
             </div>
