[ADD] (#13) - Adding logo css animation in all pages

--- a/main/main.html
+++ b/main/main.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="margin-left: 30px;">
         <div class="container-fluid">
             <a class="navbar-brand" href="../main/main.html"><img src="img/cbnu_logo_eng.png" alt="cbnu_log_eng"
-                                                                  class=""
+                                                                  class="logo-animation"
                                                                   height="80" width="301"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
