--- a/restaurant/restaurant.html
+++ b/restaurant/restaurant.html
@@ -13,7 +13,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="../main/main.html">
             <span class="blind">충북대학교 배너이미지</span>
-            <img src="img/cbnu_logo_eng.png" alt="" class="" height="80" width="301" />
+            <img src="img/cbnu_logo_eng.png" alt="" class="logo-animation" height="80" width="301" />
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
