--- a/restaurant/restaurant.html
+++ b/restaurant/restaurant.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link href="./style.css" rel="stylesheet" />
-    <title>Exercise3</title>
+    <title>Restaurant</title>
   </head>
   <body>
     <header id="header">
@@ -49,19 +49,19 @@
     <button type="button" class="btn btn-outline-warning" id="buttonWest">West Gate</button>
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel" aria-expanded="false">
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Information</h5>
+        <h2 class="offcanvas-title" id="offcanvasExampleLabel">Information</h5>
         <button type="button" id = "closeOffcanvas"class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
         <div class="container">
-          <i class ="fas fa-store"></i>
-          <p id="storeName"></p>
-          <i class ="fas fa-map-marker-alt"> location X</i>
-          <p id="locationX">x</p>
-          <i class ="fas fa-map-marker-alt"> location Y</i>
-          <p id="locationY">y</p>
-          <i class ="fas fa-hashtag"></i>
-          <p id="hash">#hash #hi</p>
+          <i class ="fas fa-store"> <label class="store-info"> Name</label></i>
+          <p id="storeName"></p><hr>
+          <i class ="fas fa-map-marker-alt"> <label class="store-info"> location X</label></i>
+          <p id="locationX">x</p><hr>
+          <i class ="fas fa-map-marker-alt"> <label class="store-info"> location Y</label></i>
+          <p id="locationY">y</p><hr>
+          <i class ="fas fa-hashtag"> <label class="store-info"> Hash Tags</label></i>
+          <p id="hash">#hash #hi</p><hr>
           
         </div>
       </div>
