[ADD] (#3) add phone number in offcanvas and change some design factor in offcanvas

--- a/restaurant/restaurant.html
+++ b/restaurant/restaurant.html
@@ -56,12 +56,14 @@
         <div class="container">
           <i class ="fas fa-store"> <label class="store-info"> Name</label></i>
           <p id="storeName"></p><hr>
-          <i class ="fas fa-map-marker-alt"> <label class="store-info"> location X</label></i>
-          <p id="locationX">x</p><hr>
-          <i class ="fas fa-map-marker-alt"> <label class="store-info"> location Y</label></i>
-          <p id="locationY">y</p><hr>
+          <i class ="fas fa-phone"> <label class="store-info"> Phone Number</label></i>
+          <p id="phone"></p><hr>
           <i class ="fas fa-hashtag"> <label class="store-info"> Hash Tags</label></i>
           <p id="hash">#hash #hi</p><hr>
+          <i class ="fas fa-map-marker-alt"> <label class="store-info"> location X</label></i>
+          <label id="locationX">x</label>
+          <i class ="fas fa-map-marker-alt"> <label class="store-info"> location Y</label></i>
+          <label id="locationY">y</label><hr>
           
         </div>
       </div>
