--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -9,7 +9,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
   <link href="./style.css" rel="stylesheet" />
-  <!--Load the AJAX API-->
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
   <script type="text/javascript" src="piechart.js"></script>
@@ -18,7 +17,6 @@
 </head>
 
 <body class="bg_main">
-  <!--Navigation-->
   <header id="header">
     <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="margin-left: 30px">
       <div class="container-fluid">
@@ -62,7 +60,6 @@
         <div class="carousel-item active" data-bs-interval="5000">
           <img src="img/bg_1.jpg" alt="">
           <div class="carousel-caption container" style="margin-right: 900px; width: 700px; margin-top: 50px;">
-            <!--                    <h1 class="display-2">Welcome To<br>CHUNGBUK National University</h1>-->
             <span class="text1">Information</span>
             <span class="text2">For international students in CBNU</span>
           </div>
@@ -83,14 +80,27 @@
     <span class="infoImage"> 
       <img src="img/status1.jpg" alt="" class="status1 img-fluid"> 
     </sapn>
-    <div id="pie_2020" class="pie_container"></div>
+    <div id="pie_2020" class="pie_container mini"></div>
   </div>
 
-  <footer id="footer">
-    <div>
+  <div class="container-fluid container2">
+    <div class="row">
+      <div class="col-sm-4" style="background-color: #FFFEEA;">
+        <a href="https://cia.chungbuk.ac.kr/kor"><img src="img/icon_kor.png" alt="" class="item link-animation"></a>
+      </div>
+      <div class="col-sm-4" style="background-color: #FBFFE0;">
+        <a href="https://cia.chungbuk.ac.kr/edu"><img src="img/icon_eng.png" alt="" class="item link-animation"></a>
+      </div>
+      <div class="col-sm-4" style="background-color: #FFFEE0;">
+        <a href="https://www.chungbuk.ac.kr/intro/index.jsp"><img src="img/icon_cbnu.png" alt="" class="item link-animation"></a>
+      </div>
+    </div>
+  </div>
+
+    <footer id="footer">
       <p>Div for Developer and Other links</p>
     </div>
-  </footer>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="./abroad.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
