--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -97,9 +97,42 @@
     </div>
   </div>
 
-    <footer id="footer">
+  <footer class="footer">
+    <div>
       <p>Div for Developer and Other links</p>
     </div>
+    <div class="footerContainer">
+      <div class="row">
+        <div class="footer-col">
+          <h4>Related Sites</h4>
+          <ul class="footerUlClass">
+            <li><a href="https://cia.chungbuk.ac.kr/eng">CBNU OIS</a></li>
+            <li><a href="https://www.chungbuk.ac.kr/site/english/main.do">CBNU Official</a></li>
+            <li><a href="https://www.chungbuk.ac.kr/site/english/sub.do?key=446">About CBNU</a></li>
+            <li><a href="https://www.chungbuk.ac.kr/site/english/sub.do?key=452">Campus Tour</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Developers</h4>
+          <ul class="footerUlClass">
+            <li><a href="https://github.com/WonJoongLee">WonJoong</a></li>
+            <li><a href="https://github.com/DongWooE">DongWoo</a></li>
+            <li><a href="https://github.com/L-o-g-a-n">SeongJin</a></li>
+          </ul>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>follow CBNU</h4>
+          <div class="social-links">
+            <a href="https://www.facebook.com/cbnu1"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/cbnu1951/?hl=en"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/chungbuk-national-university"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.youtube.com/channel/UChzyvVuA3hXb0ozIG248mFA/videos"><i class="fab fa-youtube"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="./abroad.js"></script>
