[FIX] (#13) Fix image size error caused by adding footer

--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -79,20 +79,20 @@
     </div>
     <span class="infoImage"> 
       <img src="img/status1.jpg" alt="" class="status1 img-fluid"> 
-    </sapn>
+    </span>
     <div id="pie_2020" class="pie_container mini"></div>
   </div>
 
   <div class="container-fluid container2">
     <div class="row">
       <div class="col-sm-4" style="background-color: #FFFEEA;">
-        <a href="https://cia.chungbuk.ac.kr/kor"><img src="img/icon_kor.png" alt="" class="item link-animation"></a>
+        <a href="https://cia.chungbuk.ac.kr/kor"><img src="img/icon_kor.png" alt="" class="item link-animation" width="280px" height="200px"></a>
       </div>
       <div class="col-sm-4" style="background-color: #FBFFE0;">
-        <a href="https://cia.chungbuk.ac.kr/edu"><img src="img/icon_eng.png" alt="" class="item link-animation"></a>
+        <a href="https://cia.chungbuk.ac.kr/edu"><img src="img/icon_eng.png" alt="" class="item link-animation" width="280px" height="200px"></a>
       </div>
       <div class="col-sm-4" style="background-color: #FFFEE0;">
-        <a href="https://www.chungbuk.ac.kr/intro/index.jsp"><img src="img/icon_cbnu.png" alt="" class="item link-animation"></a>
+        <a href="https://www.chungbuk.ac.kr/intro/index.jsp"><img src="img/icon_cbnu.png" alt="" class="item link-animation" width="280px" height="200px"></a>
       </div>
     </div>
   </div>
@@ -102,7 +102,7 @@
       <p>Div for Developer and Other links</p>
     </div>
     <div class="footerContainer">
-      <div class="row">
+      <div class="row" id="footerRow">
         <div class="footer-col">
           <h4>Related Sites</h4>
           <ul class="footerUlClass">
@@ -118,7 +118,6 @@
             <li><a href="https://github.com/WonJoongLee">WonJoong</a></li>
             <li><a href="https://github.com/DongWooE">DongWoo</a></li>
             <li><a href="https://github.com/L-o-g-a-n">SeongJin</a></li>
-          </ul>
           </ul>
         </div>
         <div class="footer-col">
